# vllm_logits

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  find_cuda_init.py  mkdocs.yaml  pyproject.toml  setup.py
.buildkite/: check-wheel-size.py  pyproject.toml  release-pipeline.yaml  test-pipeline.yaml
.buildkite/lm-eval-harness/: run-lm-eval-gsm-vllm-baseline.sh  test_lm_eval_correctness.py
.buildkite/nightly-benchmarks/: README.md  benchmark-pipeline.yaml  nightly-annotation.md  nightly-descriptions.md  nightly-pipeline.yaml  performance-benchmarks-descriptions.md
.buildkite/scripts/: run-benchmarks.sh  upload-wheels.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  mergify.yml
.github/ISSUE_TEMPLATE/: 100-documentation.yml  200-installation.yml  300-usage.yml  400-bug-report.yml  450-ci-failure.yml  500-feature-request.yml  600-new-model.yml  700-performance-discussion.yml  750-RFC.yml  config.yml
.github/workflows/: lint-and-deploy.yaml  reminder_comment.yml
benchmarks/: README.md  auto_tune.sh  backend_request_func.py  benchmark_dataset.py  benchmark_latency.py  benchmark_long_document_qa_throughput.py  benchmark_prefix_caching.py  benchmark_prioritization.py  benchmark_serving.py  benchmark_serving_structured_output.py  benchmark_throughput.py  pyproject.toml  run_structured_output_benchmark.sh
benchmarks/cutlass_benchmarks/: sparse_benchmarks.py  utils.py  w8a8_benchmarks.py
benchmarks/disagg_benchmarks/: disagg_overhead_benchmark.sh  disagg_performance_benchmark.sh
benchmarks/fused_kernels/: layernorm_rms_benchmarks.py
benchmarks/kernels/: bench_fp8_gemm.py  benchmark_aqlm.py  benchmark_bitblas.py  benchmark_cutlass_fp4_moe.py  benchmark_grouped_gemm_cutlass.py  benchmark_layernorm.py  benchmark_lora.py  benchmark_machete.py  benchmark_marlin.py  benchmark_moe.py  benchmark_moe_permute_unpermute.py  benchmark_paged_attention.py  benchmark_quant.py  benchmark_rmsnorm.py  benchmark_rope.py  benchmark_w8a8_block_fp8.py  graph_machete_bench.py
benchmarks/overheads/: benchmark_hashing.py
cmake/: cpu_extension.cmake
cmake/external_projects/: flashmla.cmake  vllm_logits_flash_attn.cmake
csrc/: activation_kernels.cu  cache_kernels.cu  cuda_compat.h  custom_all_reduce.cu  custom_all_reduce.cuh  custom_all_reduce_test.cu  dispatch_utils.h  layernorm_kernels.cu  layernorm_quant_kernels.cu  pos_encoding_kernels.cu  type_convert.cuh
csrc/attention/: attention_generic.cuh  attention_kernels.cuh  attention_utils.cuh  dtype_bfloat16.cuh  dtype_float16.cuh  dtype_float32.cuh  dtype_fp8.cuh  merge_attn_states.cu  paged_attention_v1.cu  paged_attention_v2.cu
csrc/core/: exception.hpp  scalar_type.hpp
csrc/cpu/: activation.cpp  attention.cpp  cache.cpp  cpu_types_arm.hpp  cpu_types_vsx.hpp  cpu_types_vxe.hpp  cpu_types_x86.hpp  layernorm.cpp  mla_decode.cpp  pos_encoding.cpp  quant.cpp  shm.cpp  utils.cpp
csrc/cutlass_extensions/: vllm_custom_types.cuh  vllm_logits_collective_builder.cuh  vllm_logits_cutlass_library_extension.py  vllm_logits_numeric_conversion.cuh  vllm_type_utils.cuh
csrc/moe/: moe_align_sum_kernels.cu  topk_softmax_kernels.cu
csrc/prepare_inputs/: advance_step.cu
csrc/quantization/: activation_kernels.cu  vectorization.cuh
csrc/rocm/: attention.cu  skinny_gemms.cu
docker/: Dockerfile  Dockerfile.arm  Dockerfile.cpu  Dockerfile.hpu  Dockerfile.neuron  Dockerfile.nightly_torch  Dockerfile.ppc64le  Dockerfile.rocm  Dockerfile.s390x  Dockerfile.tpu  Dockerfile.xpu
docs/: .nav.yml  README.md
docs/api/: README.md
docs/cli/: README.md
docs/community/: meetups.md  sponsors.md
docs/configuration/: conserving_memory.md  engine_args.md  env_vars.md  model_resolution.md  optimization.md  serve_args.md
docs/contributing/: README.md  benchmarks.md  deprecation_policy.md  profiling.md  vulnerability_management.md
docs/deployment/: docker.md  k8s.md  nginx.md
docs/design/: arch_overview.md  automatic_prefix_caching.md  huggingface_integration.md  mm_processing.md  multiprocessing.md  plugin_system.md
docs/features/: disagg_prefill.md  lora.md  multimodal_inputs.md  prompt_embeds.md  reasoning_outputs.md  spec_decode.md  structured_outputs.md  tool_calling.md
examples/: pyproject.toml
requirements/: common.txt  hpu.txt  rocm-test.txt
tests/: build_cython.py  conftest.py  test_cache_block_hashing.py  test_config.py  test_embedded_commit.py  test_inputs.py  test_logger.py  test_outputs.py  test_regression.py  test_sampling_params.py  test_scalartype.py  test_seed_behavior.py  test_sequence.py  test_sharded_state_loader.py  test_triton_utils.py  test_utils.py  test_version.py  test_vllm_logits_port.py  utils.py
tools/: check_repo.sh  check_triton_import.py  mypy.sh
vllm/: __init__.py  _ipex_ops.py  logger.py  logits_process.py  outputs.py  sampling_params.py  scripts.py  sequence.py  test_utils.py
vllm_logits/: _custom_ops.py  beam_search.py  collect_env.py  config.py  connections.py  env_override.py  envs.py  forward_context.py  pooling_params.py  py.typed  tracing.py  utils.py
(+1399 files in other folders)
